--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 
-        <title>EliteCorp</title>
+        <title>CreateCorp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
